--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
   <div class="card video-container">
     <h2>Transmisión en Vivo</h2>
     <!-- Inserta el link de tu transmisión en YouTube -->
-    <iframe src="https://www.youtube.com/embed/CODIGO_DEL_STREAM" 
+    <iframe src="rtmp://a.rtmp.youtube.com/live2" 
             allowfullscreen></iframe>
   </div>
 </body>
+
 </html>
