--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
   <div class="card video-container">
     <h2>Transmisión en Vivo</h2>
     <!-- Inserta el link de tu transmisión en YouTube -->
-    <iframe src="rtmp://a.rtmp.youtube.com/live2" 
+    <iframe src="rtmp://b.rtmp.youtube.com/live2?backup=1" 
             allowfullscreen></iframe>
   </div>
 </body>
 
 </html>
+
