--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
   <div class="card video-container">
     <h2>Transmisión en Vivo</h2>
     <!-- Inserta el link de tu transmisión en YouTube -->
-    <iframe src="rtmp://b.rtmp.youtube.com/live2?backup=1" 
+    <iframe src="https://youtube.com/live/HLIQ0YPFMdQ?feature=share" 
             allowfullscreen></iframe>
   </div>
 </body>
 
 </html>
+
 
