--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
   <div class="card video-container">
     <h2>Transmisión en Vivo</h2>
-    <!-- Inserta el link de tu transmisión en YouTube -->
-    <iframe src="https://youtube.com/live/HLIQ0YPFMdQ?feature=share" 
-            allowfullscreen></iframe>
+    <!-- Inserta el link de tu transmisión en YouTube con formato EMBED -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HLIQ0YPFMdQ?si=uc2HDRq6SpN4plpb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </body>
-
 </html>
+
+
 
 
